--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  title: Title_0
   description: MyString
-  image_url: MyString
+  image_url: ScreenShot.png
   price: 9.99
 
 two:
-  title: MyString
+  title: Other_Title
   description: MyString
-  image_url: MyString
+  image_url: ScreenShot.png
   price: 9.99
